Redesign API, Add batch compilation method